--- a/asgi_channel_demo/home/templates/chat/room.html
+++ b/asgi_channel_demo/home/templates/chat/room.html
@@ -15,7 +15,7 @@
 
     var chatSocket = new WebSocket(
         'ws://' + window.location.host +
-        '/ws/chat/' + roomName + '/');
+        '/ws/' + roomName + '/');
 
     chatSocket.onmessage = function(e) {
         var data = JSON.parse(e.data);
